<resources>
    <string name="app_name">Checar</string>
    <string name="action_settings">Settings</string>
    <string name="text_novo">Novo</string>
    <string name="text_buscar">Buscar</string>
    <string name="text_login">Login</string>
    <string name="text_version_app">Version:0.1.8</string>
    <string name="textView_nome">Nome</string>
    <string name="stringRG">RG</string>
    <string name="stringCPF">CPF</string>
    <string name="stringNome">NOME</string>
    <string name="stringButton">Cadastro</string>
    <string name="textCor">Cor</string>
    <string name="textMotor">Motor</string>
    <string name="textAno">Ano</string>
    <string name="textViewPlaca">Placa</string>
    <string name="textVersao">Versão</string>
    <string name="textViewModelo">Modelo</string>
    <string name="telanovo">Tela Placa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
