<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    tools:context="br.ufpi.es.checar.Visao.TelaPrincipal">

    <!-- Action Bar: Mudada para Toolbar versão atualizada-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"

        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>




    <!--Parte Superior do Layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1.2"
        android:background="@color/colorPrimary">

        <!--Nome do App-->
        <LinearLayout style="@style/LinearLayoutMatchWrapStyle">
            <ImageView
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:scaleType="fitXY"
                android:src="@drawable/logo_nome_app"/>
        </LinearLayout>

        <!--Logo do App-->
        <LinearLayout style="@style/LinearLayoutMatchWrapStyle">
            <ImageView
                android:layout_gravity="top"
                android:src="@drawable/icon_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <!--Parte Inferior do Layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="2"
        android:background="@android:color/background_light">

        <TableLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent">
            <!--1 Linha da tabela para os Icones -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <Button
                    android:layout_height="48dp"
                    android:layout_width="48dp"
                    android:scaleType="fitXY"
                    android:tag="Novo"
                    android:onClick="Telacnh"
                    android:background="@drawable/button_custom"
                    android:clickable="true"/>

                <Button
                    android:onClick="TesteButton"
                    android:layout_height="48dp"
                    android:layout_width="48dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:tag="Busca"
                    android:scaleType="fitXY"
                    android:background="@drawable/button_custom2"/>

                <Button
                    android:onClick="TesteButton"
                    android:layout_height="48dp"
                    android:layout_width="48dp"
                    android:scaleType="fitXY"
                    android:tag="Login"
                    android:background="@drawable/button_custom3"
                    android:src="@drawable/icon_login"/>

            </TableRow>

            <!--2 Linha da tabela para os Nomes dos Icones -->
            <TableRow android:gravity="center">
                <TextView
                    android:gravity="center"
                    android:textColor="@color/colorTextGrey"
                    android:text="@string/text_novo"/>
                <TextView
                    android:gravity="center"
                    android:textColor="@color/colorTextGrey"
                    android:text="@string/text_buscar"/>
                <TextView
                    android:gravity="center"
                    android:textColor="@color/colorTextGrey"
                    android:text="@string/text_login"/>
            </TableRow>
        </TableLayout>




    </LinearLayout>

    <!--Parte Inferior do Layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="2.5"
        android:background="@android:color/background_light">


        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_info"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#909090"
            android:text="@string/text_version_app"/>
        </LinearLayout>


</LinearLayout>
